# requirements-parser

./: .coveragerc  .flake8  .gitignore  .isort.cfg  .mypy.ini  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.rst  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.lowest.txt  setup.py  tox.ini
.github/workflows/: deploy.yml  poetry.yml
docs/: Makefile  changelog.rst  conf.py  index.rst  lowlevel.rst  requirements.txt  usage.rst
docs/_build/doctrees/: changelog.doctree  environment.pickle  index.doctree  lowlevel.doctree  usage.doctree
reqfileparser/: __init__.py  parser.py
requirements/: __init__.py  fragment.py  parser.py  requirement.py  vcs.py
tests/: __init__.py  test_parser.py  test_requirement.py
tests/reqfiles/: comment_2.expected  crateio_requirements.expected  crateio_requirements.txt  editable_1.expected  editable_1.txt  editable_2.expected  editable_2.txt  extras_1.expected  file_1.expected  file_1.txt  global_options_requirements.expected  global_options_requirements.txt  hash_1.expected  hash_1.txt  hash_2.expected  hash_2.txt  illustrative_requirements.expected  illustrative_requirements.txt  recursive_1.expected  recursive_1.txt  recursive_2.expected  recursive_2.txt  recursive_3.expected  relative_path.txt  requests-issue-68.expected  rtfd_deploy_requirements.expected  rtfd_deploy_requirements.txt  rtfd_requirements.expected  rtfd_requirements.txt  simple_1.expected  simple_1.txt  specs_1.expected  subdirectory.expected  subdirectory.txt  underscores.expected  underscores.txt  uri.expected  vcs_bzr.expected  vcs_git.expected  vcs_git.txt  (+7 more)
